# af-finanzen

./: .gitignore  BACKLOG.md  GEMINI.md
bash/: migrate_revolut_paths.sh  revolut_change_file_names-i0.sh  revolut_change_file_names-i1.sh  revolut_upload_to_gcs_i1.sh  transak.monatsabschluss.create_external_table_definitions_i0.sh  transak.monatsabschluss.create_external_table_definitions_i1.sh  transak.monatsabschluss.sh  transak.sankey.sh
cloud_functions/cf-i0-predict-lr/: FeatureEngineering.py  Readme.md  TechInfo.py  main.py  requirements.txt
cloud_functions/cf-i1-predict/: main.py  requirements.txt
cloud_functions/cf-i1-train/: README.md  main.py  requirements.txt
cloud_functions/cf-model-lr/: FeatureEngineering.py  main.py
cloud_functions/cf-pdf2bq/: Readme.MD  main.py  requirements.txt
cloud_functions/cf-pdfmininions/: main.py  requirements.txt
cloud_functions/cf-pdfminions/: Readme.MD  graph.py  langgraph.json  main.py  main_hello_world_ggenaiapi.py  requirements.txt
cloud_functions/cf-pf-csv-transform/: FileContent.py  main.py  pyproject.toml
cloud_functions/cf-predict-i1/: main.py
cloud_functions/cf-predict-lr/: FeatureEngineering.py  TechInfo.py  main.py  requirements.txt
cloud_functions/cf-transform-csv/: FileContent.py  FileContent_tests.py  main.py  main_tests.py  requirements.txt
jupiter/italia_sankey/: main.ipynb
jupiter/learning/joiart-galaxy/: joiart-galaxy.html  transform_stars.ipynb
jupiter/learning/matplotlib/: main.ipynb
jupiter/learning/mlflow/projects/quick-start/: main.ipynb
jupiter/learning/tensorflow/m3/: main.ipynb
jupiter/transak/i1/: i1_fe_feature_column.ipynb  i1_feature_engineering.ipynb
jupiter/transak/i1/feature_column/: i1_fe_feature_column.ipynb  pyproject.toml  requirements.txt
jupiter/transak/i1/keras_functional_api/: Readme.md  i1_keras.ipynb  pyproject.toml  requirements.txt
jupiter/transak/i1/keras_functional_api/common/: utils.py
jupiter/transak/i1/keras_functional_api/data_prep/: task.py
jupiter/transak/i1/keras_functional_api/evaluation/: task.py
jupiter/transak/i1/keras_functional_api/notebooks/: i1_keras_subclasses.ipynb
jupiter/transak/i1/keras_functional_api/pipeline/: pipeline.py
jupiter/transak/i1/keras_functional_api/pipeline/components/: data_prep.py  evaluation.py  register.py  trainer.py  training.py
jupiter/transak/i1/keras_functional_api/tasks/data_prep/: task.py
jupiter/transak/i1/keras_functional_api/tasks/evaluation/: task.py
jupiter/transak/i1/keras_functional_api/tasks/register/: task.py
jupiter/transak/i1/keras_functional_api/tasks/trainer/: task.py
jupiter/transak/i1/keras_functional_api/trainer/: task.py
jupiter/transak/logistic_regression/: main.ipynb
jupiter/transaktionator-lr/: main.ipynb
prd/jahresabschluss/: Jahresabschluss_2025.md  cf-pf-csv-transform.PRD.md
python/logistic_regression_classification/: main.py  medium_text_classification.py  requirements.txt
sql/: i1_revolut_bq_gsheet_connection.sql  revolut_bq_gsheet_connection.sql  ubs_bq_gsheets_connection.sql
terraform/: main.tf  provider.tf  variables.tf
terraform/bq-schemas/: banks.postfinance.json  banks.postfinance_iban_mapping.json  banks.predictions.json  banks.predictions_shadow.json  banks.revolut.json  banks.revolut_raw.json  banks.ubs.json  banks.zak.json  monatsabschluss.revolut_abrechnung.json  monatsabschluss.sankey.json  revolut.transactions.json  transak.i0_predictions.json  transak.i1_labels.json  transak.i1_models.json  transak.i1_predictions.json  transak.i1_vectorizers.json
terraform/bq-views/: analytics.sankey.sql  analytics.sankey_v.sql  banks.postfinance_iban_mapping_v.sql  banks.postfinance_v.sql  banks.revolut_v.sql  banks.ubs_v.sql  monatsabschluss.revolut_abrechnung_v.sql  monatsabschluss.sankey_v.sql  transak.i1_data_revolut_v.sql  transak.i1_predictions_v.sql
terraform/modules/gcf/: main.tf  variables.tf
terraform/modules/gcf_gen2/: main.tf  variables.tf
terraform/modules/gcf_gen2/zips/: placeholder
terraform/modules/gstorage/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  variables.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
vertex_ai/transak_i1/: .gcloudignore  Dockerfile  GEMINI.md  MODEL_MONITORING_IMPLEMENTATION_PLAN.md  MODEL_MONITORING_PLAN.md  MODEL_MONITORING_REPORT.md  MODEL_MONITORING_REQUIREMENTS.md  PLAN_PREDICTION.md  Readme.md  blog_post_pipeline_train.md  cleanup-policy.json  pyproject.toml  requirements.txt  transak-i1-predict.json
vertex_ai/transak_i1/pipelines/: pipeline.py  pipeline_predict.py  pipeline_train.py
vertex_ai/transak_i1/pipelines/components/: batch_predict.py  bless_model.py  bless_or_not_to_bless.py  bq_config_generator.py  calc_f1_scores.py  create_monitoring_baseline.py  custom_batch_predict.py  data_prep.py  data_splits.py  evaluation.py  get_accuracy_from_metrics.py  get_model_resource_name.py  get_prediction_data.py  get_production_model.py  get_production_model_metrics.py  model_monitoring.py  prediction_config_generator.py  register.py  run_monitoring.py  save_predictions.py  setup_monitoring.py  trainer.py  trigger_retraining.py  utils.py
vertex_ai/transak_i1/src/common/: base_sql.py  utils.py
vertex_ai/transak_i1/src/components/batch_predict/: task.py
vertex_ai/transak_i1/src/components/custom_batch_predict/: task.py
vertex_ai/transak_i1/src/components/data_prep/: task.py
vertex_ai/transak_i1/src/components/data_splits/: task.py
vertex_ai/transak_i1/src/components/evaluation/: classification_metrics_1.0.0.yaml  classification_metrics_1.0.0_transak.yaml  schema_modelevaluation_classification_metrics_1.0.0.yaml  task.py
vertex_ai/transak_i1/src/components/get_model_resource_name/: task.py
vertex_ai/transak_i1/src/components/register/: task.py
vertex_ai/transak_i1/src/components/trainer/: model.py  task.py
