[project]
name = "cf-pf-csv-transform"
version = "1.0.0"
description = "Cloud Function to transform PostFinance CSV exports"
requires-python = ">=3.10"

dependencies = [
    "google-cloud-storage==2.14.0",
    "google-cloud-logging==3.11.4",
    "backoff==2.2.1",
    "python-dateutil==2.8.2",
    "functions-framework==3.5.0",
]
