[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transak-tf-fc"
version = "0.1.0"
description = "A project to train a Keras classification model on BigQuery data for assigning banks transaction to a home budget. It uses old Tensorflow tf.feature_conlumn API in order to use it as a preparation for GCP ML Engineer exam."
authors = [
  { name = "Artur Fejklowicz"},
]
requires-python = "~=3.9"

dependencies = [
    # Core Data & ML
    "numpy==1.23.5",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "tensorflow==2.12.1",
    
    # Google Cloud Stack
    "google-cloud-bigquery==3.9.0",
    "google-cloud-bigquery-storage==2.20.0", # Added explicitly
    "pyarrow==11.0.0",                       # Added explicitly
    "db-dtypes==1.0.5",
    "google-cloud-storage==2.7.0",
    "google-auth==2.15.0",

    # Visualization
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "facets-overview==1.1.1",

    # Notebook
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "pyzmq==26.4.0",
    "traitlets==5.14.3",
    "tornado==6.4",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "prompt-toolkit==3.0.47",
    "pygments==2.18.0",
    "stack-data==0.6.3",
    "psutil==5.9.8",
    "packaging==25.0",
    "platformdirs==4.3.8",

    # Other
    "python-dateutil==2.8.2",
    "six==1.16.0",
    "importlib-metadata==7.2.1",
    "zipp==3.19.2",
    "executing==2.0.1",
    "asttokens==3.0.0",
    "pure_eval==0.2.3",
    "typing-extensions==4.5.0",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "wcwidth==0.2.13",
    "comm==0.2.2",
    "pytz==2025.2",
]

[project.urls]
"Homepage" = "https://github.com/aturroo/af-finanzen"
"LinkedIn" = "https://www.linkedin.com/in/arturr/"