[project]
name = "transak-i1-keras-functional-api"
version = "0.1.0"
description = "Classification of Artur's Revolut transactions with Deep Neural Network using the Keras Functional API with TensorFlow."
# We specify Python 3.11.x is required.
requires-python = ">=3.11, <3.12"

dependencies = [
    "tensorflow==2.18.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.9.0",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "jupyterlab==4.2.1",
    "ipykernel==6.29.4",
    "google-cloud-bigquery[pandas]==3.24.0",
    "pydot==4.0.1",
    "graphviz==0.21"
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff==0.4.8",
    "mypy==1.10.0",
]
visualization = [

]
[tool.uv]
# This section is optional but can be used for uv-specific configurations
